--- a/app/login/page.module.css
+++ b/app/login/page.module.css
@@ -1,6 +1,6 @@
-.loginForm {
+/* .loginForm {
   width: 100%;
-  max-width: 20rem; /* Or whatever width you prefer */
+  max-width: 20rem;
   margin: auto;
   padding: 1rem;
   display: flex;
@@ -12,10 +12,21 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+} */
 
 .errorMessage {
   color: rgba(255, 0, 0, 0.805);
   font-size: 0.8rem;
   margin: 0.5rem 0;
+}
+
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+
+  min-height: 100dvh;
+  width: 100%;
+  padding: 70vh 2rem 2rem 2rem;
 }
