--- a/styles/global.css
+++ b/styles/global.css
@@ -173,3 +173,21 @@ fieldset {
   background-color: #7978784D;
 }
 
+.group-card {
+  border: 1px solid var(--color-secondary);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.workshop-card {
+  border: 1px solid var(--color-secondary);
+  border-radius: var(--border-radius);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  background-color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
