--- a/styles/global.css
+++ b/styles/global.css
@@ -1,25 +1,25 @@
 @import url("reset.css");
-/* This is a custom font from google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
-/* what is :root? https://developer.mozilla.org/en-US/docs/Web/CSS/:root */
 :root {
   /* Define design variables */
-  --color-primary: #2b2d42;
-  --color-secondary: #bfc6d2;
-  --color-background: #f5f5f5;
-  --color-accent: #535bf2;
+  --color-texts-dark: #444444;
+  --color-texts-light: #ffffff;
+  --color-secondary: #bfc6d2; /* this will be for elements like buttons*/ 
+  --color-borders: #414141; /* borders and dividers */
+  --color-background: #4e4d4f ; /* default background if admin didn't upload images */
+  --color-accent: #535bf2; /* links and highlights */
 
   --border-radius: 0.5rem;
 
   --font-titles: "Rubik", serif;
-  --font-body: system-ui, sans-serif; /* system-ui matches the user's system font */
+  --font-body: "Rubik", serif;
+  
+  --background-video-url: '/background.mp4'; /* Path to the background video */
 
 }
 
 body {
-  color: var(--color-primary);
-  background-color: var(--color-background);
   font-family: var(--font-body);
   direction: rtl;
 }
@@ -29,29 +29,6 @@ main {
   max-width: 60rem;
   padding: 2rem;
   margin: 0 auto;
-}
-
-header {
-  padding: 1rem 2rem;
-  background-color: var(--color-primary);
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-
-  a {
-    text-decoration: none;
-    color: var(--color-background);
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  h1 {
-    margin: 0;
-  }
-
 }
 
 /* Text */
@@ -104,17 +81,9 @@ h6 {
   font-size: 0.83em;
 }
 
-blockquote {
-  padding-left: 1rem;
-  border-left: 2px solid var(--color-secondary);
-}
-
 /* Links */
 a {
   color: var(--color-accent);
-  text-decoration: none;
-}
-a:hover {
   text-decoration: none;
 }
 
@@ -127,7 +96,7 @@ table {
 table td,
 table th {
   padding: 0.5rem;
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(--color-borders);
 }
 
 /* Forms */
@@ -136,32 +105,13 @@ button,
 textarea,
 select {
   padding: 0.2em 0.5em;
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(--color-borders);
   border-radius: var(--border-radius);
 }
 
 fieldset {
   margin-top: 1.5rem;
-  border: 1px solid var(--color-secondary);
-}
-
-.counter-button {
-  background-color: var(--color-accent);
-  width: 2rem;
-  height: 2rem;
-  color: white;
-  border: none;
-  border-radius: 1000px; /* Make the button round */
-  cursor: pointer;
-  font-weight: bold;
-
-  &:hover {
-    filter: brightness(120%);
-  }
-
-  &:active {
-    filter: brightness(80%);
-  }
+  border: 1px solid var(--color-borders);
 }
 
 .user-navbar,
@@ -170,35 +120,27 @@ fieldset {
   flex-direction: row;
   gap: 1rem;
   border-radius: 700px;
-  background-color: #7978784D;
+  background-color: var(--color-secondary);
 }
 
 .group-card {
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(--color-borders);
   border-radius: var(--border-radius);
   padding: 1rem;
   margin-bottom: 1.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: var(--color-background); /* Default background color */
   background-size: cover;
   background-position: center;
-  color: white;
+  color: var(--color-texts-light);
 }
 
-.workshop-card {
-  border: 1px solid var(--color-secondary);
-  border-radius: var(--border-radius);
-  padding: 1rem;
-  margin-bottom: 1.5rem;
-  background-color: white;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  color: white;
-}
 
 .whatsappLink svg {
   color: black;
 }
 
-/* Toast Custom Styles */
+/* Toast Custom Styles - for popups */
 .toast-confirm-container {
   text-align: center;
 }
@@ -222,13 +164,13 @@ fieldset {
 }
 
 .toast-button-cancel {
-  background: #ddd;
+  background: var(--color-background);
   color: #333;
 }
 
 .toast-button-confirm {
-  background: var(--color-primary);
-  color: white;
+  background: var(--color-background);
+  color: var(--color-texts-light);
 }
 
 .toast-prompt-container {
@@ -268,7 +210,7 @@ fieldset {
 .read-more-button {
   background: none;
   border: none;
-  color: #007bff;
+  color: var(--color-accent);
   cursor: pointer;
   padding-bottom: 1rem;
   padding-right: 0;
@@ -294,4 +236,23 @@ button {
 
 .meeting-time {
   text-align: left;
+}
+
+.background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  opacity: 0.1; 
+}
+
+.btn {
+  cursor: pointer;
+  background-color: var(--color-secondary);
+  border: none;
+  border-radius: var(--border-radius);
+  padding: 0.5rem 1rem;
 }
