--- a/styles/global.css
+++ b/styles/global.css
@@ -186,7 +186,7 @@ fieldset {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid var(--color-borders);
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -255,4 +255,8 @@ button {
   border: none;
   border-radius: var(--border-radius);
   padding: 0.5rem 1rem;
+}
+
+.dark-texts {
+  color: var(--color-texts-dark);
 }
