--- a/app/login/GoogleLoginButton.module.css
+++ b/app/login/GoogleLoginButton.module.css
@@ -1,27 +1,29 @@
 .googleButton {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  gap: 4.813rem;
+  justify-content: center;
+  gap: 0.75rem;
   
   width: 100%;
   max-width: 18.75rem;
   padding: 0.75rem 1.5rem;
+  margin-bottom: 1rem;
   
   background-color: var(--color-background);
   
+  border: none; 
   border-radius: 3.7rem;
-  border: none;
   
   color: var(--color-texts-light);
   font-family: var(--font-body);
-  font-size: 1.375rem;
+  font-size: 1.375rem; 
   font-weight: 400;
   line-height: normal;
-  text-align: right;
+  text-align: center;
   
   cursor: pointer;
   transition: all 0.3s ease;
+  position: relative; 
 }
 
 .googleButton:hover {
@@ -29,8 +31,22 @@
   transform: translateY(-0.125rem);
 }
 
-.googleButton:active {
-  transform: translateY(0);
+/* Special class for the button with icon (for users) */
+.withIcon {
+  justify-content: space-between; 
+  direction: ltr; /* to make the icon on the left and text on the right */
+}
+
+/* When there is an icon, we want the text to take up the space to look good */
+.withIcon span {
+    flex: 1;
+    text-align: right;
+}
+
+.adminButton {
+  width: auto;
+  min-width: 10rem;
+  padding: 0.75rem 2rem;
 }
 
 .spinner {
