--- a/app/login/GoogleLoginButton.module.css
+++ b/app/login/GoogleLoginButton.module.css
@@ -14,7 +14,7 @@
   border: none; 
   border-radius: 3.7rem;
   
-  color: var(--color-texts-light);
+  color: var(--color-primary-light);
   font-family: var(--font-body);
   font-size: 1.375rem; 
   font-weight: 400;
@@ -52,7 +52,7 @@
 .spinner {
   width: 1rem;
   height: 1rem;
-  border: 0.125rem solid var(--color-texts-light);
+  border: 0.125rem solid var(--color-primary-light);
   border-bottom-color: transparent;
   border-radius: 50%;
   animation: rotation 1s linear infinite;
