fixes to navigation

--- a/styles/global.css
+++ b/styles/global.css
@@ -20,7 +20,6 @@
 }
 
 html {
-  overflow-x: scroll;
   width: 100%;
 }
 
@@ -28,7 +27,6 @@ body {
   font-family: var(--font-body);
   direction: rtl;
   height: 100%;
-  overflow-x: scroll;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -158,7 +156,6 @@ fieldset {
 
 .navbar-tabs-container a {
   text-decoration: none;
-  color: inherit;
   -webkit-tap-highlight-color: transparent;
   outline: none;
 }
@@ -170,7 +167,6 @@ fieldset {
 
 .navbar-tabs-container a:active {
   background: none !important;
-  color: inherit;
 }
 
 .navbar-icons-container {
@@ -364,7 +360,7 @@ fieldset {
   border-radius: 700px;
   display: block;
   transition: background-color 0.3s, box-shadow 0.2s, transform 0.1s;
-  color: var(--color-texts-light) !important;
+  color: var(--color-texts-light);
   text-align: center;
 }
 
@@ -379,7 +375,7 @@ fieldset {
   padding: 0.5rem 1.2rem;
   display: block;
   transition: background-color 0.3s ease;
-  color: var(--color-texts-light) !important;
+  color: var(--color-texts-light);
   text-align: center;
 }
 
