--- a/app/login/GoogleLoginButton.module.css
+++ b/app/login/GoogleLoginButton.module.css
@@ -14,7 +14,7 @@
   border: none; 
   border-radius: 3.7rem;
   
-  color: var(--color-primary-light);
+  color: var(--color-texts-light);
   font-family: var(--font-body);
   font-size: 1.375rem; 
   font-weight: 400;
