changes to global

--- a/app/admin/components/AdminAnnouncement/AdminAnnouncement.module.css
+++ b/app/admin/components/AdminAnnouncement/AdminAnnouncement.module.css
@@ -18,7 +18,7 @@
   height: 40px;
   border-radius: 50%;
   background-color: var(--color-background-light); 
-  color: var(--color-texts-dark); 
+  color: var(--text-dark-1); 
   transition: all 0.2s ease-in-out;
 }
 
