--- a/components/AnnouncementDisplay/AnnouncementDisplay.module.css
+++ b/components/AnnouncementDisplay/AnnouncementDisplay.module.css
@@ -24,7 +24,7 @@
 
 .deleteButton:hover {
   background-color: rgba(255, 255, 255, 0.9);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
 }
 
 .cardContent {
