--- a/components/Cards/UserCard.module.css
+++ b/components/Cards/UserCard.module.css
@@ -10,7 +10,7 @@
   /* Glassmorphism */
   background-color: var(--color-background);
   
-  color: var(--color-primary-light);
+  color: var(--text-light);
   gap: 1rem; /* gap between text and buttons */
 }
 
@@ -33,7 +33,7 @@
   text-decoration: underline;
   text-decoration-color: rgba(var(--glass-base-rgb-light), 0.5);
   text-underline-offset: 4px;
-  color: var(--color-primary-light);
+  color: var(--text-light);
   
   /* Prevent wrapping and handle overflow with ellipsis */
   white-space: nowrap;
@@ -44,7 +44,7 @@
 
 .subtitle {
   font-size: 0.85rem;
-  color: var(--color-primary-light);
+  color: var(--text-light);
   opacity: 0.9;
   margin: 0;
   line-height: 1.2;
@@ -52,7 +52,7 @@
 
 .date {
   font-size: 0.75rem;
-  color: var(--color-primary-light);
+  color: var(--text-light);
   opacity: 0.6;
   margin-top: 0.2rem;
 }
@@ -92,7 +92,7 @@
   height: 35px;
   border-radius: 50%;
   background-color: rgba(var(--glass-base-rgb-light), 0.47);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,7 +115,7 @@
 
 .approveBtn {
   background-color: rgba(var(--glass-base-rgb-dark), 0.7);
-  color: var(--color-primary-light);
+  color: var(--text-light);
 }
 
 .approveBtn:hover {
@@ -124,7 +124,7 @@
 
 .rejectBtn {
   background-color: rgba(var(--glass-base-rgb-dark), 0.2);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
 }
 
 .rejectBtn:hover {
