--- a/components/buttons/BackButton.module.css
+++ b/components/buttons/BackButton.module.css
@@ -3,7 +3,7 @@
   display: inline-flex;
   align-items: center;
   
-  color: var(--color-primary-dark); 
+  color: var(--text-dark-2); 
 }
 
 /* SVG Icon styling */
