--- a/components/Badges/Badge.module.css
+++ b/components/Badges/Badge.module.css
@@ -27,12 +27,12 @@
 
 .gray {
   background-color: var(--color-secondary); 
-  color: var(--color-primary-light);
+  color: var(--text-light);
 }
 
 .white {
   background-color: rgba(var(--glass-base-rgb-light), 0.7);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
 }
 
 .iconWrapper {
