--- a/components/buttons/Button.module.css
+++ b/components/buttons/Button.module.css
@@ -35,7 +35,7 @@
 /* Dark background button */
 .primary {
   background-color: rgba(var(--glass-base-rgb-dark), 0.7);
-  color: var(--color-primary-light);
+  color: var(--text-light);
 
 }
 .primary:hover {
@@ -45,7 +45,7 @@
 /* Light background button */
 .secondaryGray {
   background-color: rgba(var(--glass-base-rgb-dark), 0.2);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
 }
 .secondaryGray:hover {
   background-color: var(--color-background);
@@ -53,7 +53,7 @@
 
 .secondaryLight {
   background-color: rgba(var(--glass-base-rgb-light), 0.47);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
 }
 .secondaryLight:hover {
   background-color: var(--color-background-light);
@@ -62,7 +62,7 @@
 /* Icon-only button (for Whatsapp) */
 .iconOnly {
   background-color: rgba(var(--glass-base-rgb-light), 0.47);
-  color: var(--color-primary-dark);
+  color: var(--text-dark-2);
   padding: 0.5rem;
   width: 2.1rem;
   height: 2.1rem;
