--- a/styles/global.css
+++ b/styles/global.css
@@ -1,18 +1,16 @@
 @import url("reset.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@400;500;600;700&display=swap");
 
+/* Define design variables */
 :root {
-  /* Define design variables */
-  --color-texts-dark: #444444;
-  --color-texts-light: #ffffff;
-  --color-primary-dark: #444444;
-  --color-primary-light: #ffffff;
+  --text-dark-1: #444444;
+  --text-light: #ffffff;
+  --text-dark-2: #444444;
   --color-secondary: rgba(136, 136, 136, 0.5); /* this will be for elements like buttons*/ 
   --color-background: rgba(100, 100, 100, 0.40);  /* for backgrounds, like text fields in registration and cards */
   --color-background-light: rgba(255, 255, 255, 0.60); /* light background for cards (admin) */
-  /* --color-borders: #414141; borders and dividers */
-  /* --color-accent: #535bf2; links and highlights */
+  --color-borders: #414141; /* borders and dividers */
+  --color-accent: #535bf2; /* links and highlights */
 
   /* Base RGB for glassmorphism effects */
   /* use this for elements with different opacities */
@@ -25,8 +23,9 @@
   --border-radius: 0.5rem;
 
   --font-titles: "Rubik", serif;
-  --font-body: "Assistant", serif;
+  --font-body: "Rubik", serif;
 }
+
 
 html {
   width: 100%;
@@ -53,6 +52,10 @@ main {
 /* Text */
 p {
   margin: 0 0;
+  font-size: 1rem;
+  line-height: 20px;
+  font-family: var(--font-body);
+
 }
 
 ul,
@@ -65,22 +68,51 @@ li {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 1rem;
   font-family: var(--font-titles);
-  font-weight: 500;
-  font-optical-sizing: auto;
 }
 
-h1 { font-size: 2.5em; }
-h2 { font-size: 2em; }
-h3 { font-size: 1.5em; }
-h4 { font-size: 1.2em; }
-h5 { font-size: 1em; }
-h6 { font-size: 0.83em; }
+h1 { 
+  font-size: 1.75rem;
+  font-weight: 500;
+  line-height: 22px;
+
+ }
+h2 { 
+  font-size: 1.375rem;
+  font-weight: 400;
+  line-height: auto;
+}
+
+h3 { 
+  font-size: 1.375rem;
+  font-weight: 500;
+  line-height: auto;
+}
+
+.sadot {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 20px;
+}
+
+.h2-light {
+  font-weight: 300;
+  font-size: 1.375rem;
+  line-height: auto; 
+}
+
+.p4 {
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 132%;
+}
+
+
+
 
 /* Links */
 a {
-  color: var(--color-accent);
+  color: #535bf2;
   text-decoration: none;
 }
 
@@ -93,7 +125,7 @@ table {
 table td,
 table th {
   padding: 0.5rem;
-  border: 1px solid var(--color-borders);
+  border: 1px solid #414141;
 }
 
 /* Forms */
@@ -102,13 +134,13 @@ button,
 textarea,
 select {
   padding: 0.2em 0.5em;
-  border: 1px solid var(--color-borders);
-  border-radius: var(--border-radius);
+  border: 1px solid #414141;
+  border-radius: 0.5rem;
 }
 
 fieldset {
   margin-top: 1.5rem;
-  border: 1px solid var(--color-borders);
+  border: 1px solid #414141;
 }
 
 /* --- Notification Bell Styles --- */
@@ -311,13 +343,13 @@ fieldset {
 }
 
 .toast-button-cancel {
-  background: var(--color-background);
+  background: rgba(100, 100, 100, 0.40);
   color: #333;
 }
 
 .toast-button-confirm {
-  background: var(--color-background);
-  color: var(--color-texts-light);
+  background: rgba(100, 100, 100, 0.40);
+  color: #ffffff;
 }
 
 .toast-prompt-container {
@@ -333,7 +365,7 @@ fieldset {
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid var(--color-borders);
+  border: 1px solid #414141;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -347,14 +379,14 @@ button {
 
 .btn {
   cursor: pointer;
-  background-color: var(--color-secondary);
+  background-color: rgba(136, 136, 136, 0.5);
   border: none;
-  border-radius: var(--border-radius);
+  border-radius: 0.5rem;
   padding: 0.5rem 1rem;
 }
 
 .dark-texts {
-  color: var(--color-texts-dark);
+  color: #444444;
 }
 
 /* --- Video Background --- */
